[gd_scene load_steps=9 format=3 uid="uid://3po5cq6p7ujc"]

[ext_resource type="Script" path="res://Scenes/Scripts/map.gd" id="1_bqrdo"]
[ext_resource type="Texture2D" uid="uid://b6k2ynjqiyrby" path="res://Sprites/temp_map.png" id="1_mbdqn"]
[ext_resource type="PackedScene" uid="uid://b0781ipcpmjaf" path="res://Scenes/Quest/quest.tscn" id="3_d64i7"]
[ext_resource type="Texture2D" uid="uid://uyp1u80u77t6" path="res://Sprites/camp/campfire.png" id="3_qnsfu"]
[ext_resource type="LabelSettings" uid="uid://cb4eflp81bok5" path="res://Themes/HeaderLabel.tres" id="4_cpy0l"]
[ext_resource type="LabelSettings" uid="uid://dw18pcv0wtiom" path="res://Themes/BodyLabel.tres" id="5_7xw65"]
[ext_resource type="PackedScene" uid="uid://c6gdoil0o70r1" path="res://Scenes/Pieces/part_button.tscn" id="6_epqax"]
[ext_resource type="PackedScene" uid="uid://bxfmkq8bgumev" path="res://Scenes/Quest/combat.tscn" id="7_fpvvu"]

[node name="Map" type="Node2D"]
script = ExtResource("1_bqrdo")

[node name="TempMap" type="Sprite2D" parent="."]
texture = ExtResource("1_mbdqn")

[node name="Switch" type="Button" parent="."]
offset_left = -950.0
offset_top = -534.0
offset_right = -850.0
offset_bottom = -434.0
icon = ExtResource("3_qnsfu")
expand_icon = true

[node name="Quests" type="Node2D" parent="."]

[node name="Goblin Grotto" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -844.0
offset_top = -81.0
offset_right = -744.0
offset_bottom = 19.0
part = "m0"
enemy = "Goblin"
dataDisplayPosition = Vector2(-734, -235)

[node name="Slime Meadows" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -721.0
offset_top = 314.0
offset_right = -621.0
offset_bottom = 414.0
part = "f0"
enemy = "Slime"
dataDisplayPosition = Vector2(-600, 126)

[node name="Slithering Stream" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -330.0
offset_top = 204.0
offset_right = -230.0
offset_bottom = 304.0
part = "s0"
enemy = "Snake"
dataDisplayPosition = Vector2(-217, 126)

[node name="Fungal Grove" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -562.0
offset_top = -361.0
offset_right = -462.0
offset_bottom = -261.0
part = "f1"
enemy = "Fairy"
dataDisplayPosition = Vector2(-454, -474)

[node name="Singing Lake" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -294.0
offset_top = -127.0
offset_right = -194.0
offset_bottom = -27.0
part = "s1"
enemy = "Mermaid"
dataDisplayPosition = Vector2(-189, -273)

[node name="Abandon Mine" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -142.0
offset_top = -375.0
offset_right = -42.0
offset_bottom = -275.0
part = "m1"
enemy = "Skeleton"
dataDisplayPosition = Vector2(-35, -491)

[node name="Glistening Sands" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 225.0
offset_top = 343.0
offset_right = 325.0
offset_bottom = 443.0
part = "m2"
enemy = "Golem"
dataDisplayPosition = Vector2(-400, 140)

[node name="Lizard Land" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 248.0
offset_top = 46.0
offset_right = 348.0
offset_bottom = 146.0
part = "s2"
enemy = "Magma Lizard"
dataDisplayPosition = Vector2(-374, -93)

[node name="Dancing Fires" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 627.0
offset_top = 295.0
offset_right = 727.0
offset_bottom = 395.0
part = "f2"
enemy = "Fire Fox"
dataDisplayPosition = Vector2(2, 126)

[node name="Ancient Temple" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 335.0
offset_top = -437.0
offset_right = 435.0
offset_bottom = -337.0
part = "m3"
enemy = "Animated Armor"
dataDisplayPosition = Vector2(-292, -513)

[node name="Suspicious Chest" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 706.0
offset_top = -129.0
offset_right = 806.0
offset_bottom = -29.0
part = "f3"
enemy = "Mimic"
dataDisplayPosition = Vector2(81, -273)

[node name="Nearing Dragon" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 500.0
offset_top = -254.0
offset_right = 600.0
offset_bottom = -154.0
part = "s3"
enemy = "Wyvern"
dataDisplayPosition = Vector2(-125, -383)

[node name="Dragon Peak" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 782.0
offset_top = -483.0
offset_right = 882.0
offset_bottom = -383.0
part = "m0"
enemy = "Dragon"
dataDisplayPosition = Vector2(144, -482)

[node name="QuestName" type="Label" parent="."]
z_index = 1
offset_left = 1073.0
offset_top = -379.0
offset_right = 1533.0
offset_bottom = -310.0
text = "Quest Name"
label_settings = ExtResource("4_cpy0l")
horizontal_alignment = 1

[node name="MaterialLabel" type="Label" parent="QuestName"]
layout_mode = 0
offset_left = 29.0
offset_top = 92.0
offset_right = 248.0
offset_bottom = 177.0
text = "Material:
common metal"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="Node2D" type="Node2D" parent="QuestName"]
position = Vector2(-2, 200)

[node name="Enemy" type="Label" parent="QuestName/Node2D"]
offset_top = -1.0
offset_right = 285.0
offset_bottom = 41.0
text = "Enemy:"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="EnemyData" type="Label" parent="QuestName/Node2D/Enemy"]
layout_mode = 0
offset_left = 1.0
offset_top = 37.0
offset_right = 275.0
offset_bottom = 202.0
text = "enemy type
Attack:
Defense:"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="You" type="Label" parent="QuestName/Node2D"]
offset_left = 307.0
offset_right = 413.0
offset_bottom = 42.0
text = "You:"
label_settings = ExtResource("5_7xw65")

[node name="YourData" type="Label" parent="QuestName/Node2D/You"]
layout_mode = 0
offset_left = -80.0
offset_top = 37.0
offset_right = 140.0
offset_bottom = 202.0
text = "
Attack:
Defense:"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="QuestName"]
clip_children = 2
z_index = -1
layout_mode = 0
offset_right = 461.0
offset_bottom = 349.0
color = Color(0.933333, 0.862745, 0.701961, 1)

[node name="PartSprite" parent="QuestName" instance=ExtResource("6_epqax")]
layout_mode = 0
offset_left = 308.0
offset_top = 83.0
offset_right = 408.0
offset_bottom = 183.0

[node name="Combat" parent="." instance=ExtResource("7_fpvvu")]
visible = false
position = Vector2(-495, -491)

[connection signal="button_down" from="Switch" to="." method="_on_switch_button_down"]
[connection signal="combat_done" from="Combat" to="." method="_on_combat_combat_done"]
[connection signal="player_death" from="Combat" to="." method="_on_combat_player_death"]
